[gd_scene load_steps=12 format=3 uid="uid://pmvrn667wplj"]

[ext_resource type="Script" path="res://scripts/combat.gd" id="1_13w2b"]
[ext_resource type="Texture2D" uid="uid://cu1vpay8autcl" path="res://assets/combat/combat-bkgd.webp" id="2_fq8ip"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="3_njh3d"]
[ext_resource type="PackedScene" uid="uid://cewh1c21m23gm" path="res://scenes/coin.tscn" id="4_2kwv4"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="5_ijhsi"]
[ext_resource type="AudioStream" uid="uid://b13jwyutusvac" path="res://sfx/round-start.ogg" id="6_8r05d"]
[ext_resource type="AudioStream" uid="uid://boxhyb140chdc" path="res://sfx/win.ogg" id="7_scu3q"]
[ext_resource type="AudioStream" uid="uid://b46bsj2puuuan" path="res://sfx/lose.ogg" id="8_ermqd"]

[sub_resource type="Animation" id="Animation_d7ty7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, -328)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8an6y"]
resource_name = "show"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2.4),
"transitions": PackedFloat32Array(0.3, 1, 0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2.4),
"transitions": PackedFloat32Array(0.3, 1, 0.3, 1),
"update": 0,
"values": [Vector2(456, -328), Vector2(456, 360), Vector2(456, 360), Vector2(456, 1096)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p2ymp"]
_data = {
"RESET": SubResource("Animation_d7ty7"),
"show": SubResource("Animation_8an6y")
}

[node name="Combat" type="Node2D"]
script = ExtResource("1_13w2b")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 4
texture = ExtResource("2_fq8ip")
stretch_mode = 6

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("3_njh3d")
scene = ExtResource("4_2kwv4")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("5_ijhsi")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBarWin" type="ProgressBar" parent="UI"]
offset_left = 1792.0
offset_top = 136.0
offset_right = 1852.0
offset_bottom = 936.0
fill_mode = 3

[node name="ProgressBarLose" type="ProgressBar" parent="UI"]
offset_left = 72.0
offset_top = 136.0
offset_right = 132.0
offset_bottom = 936.0
fill_mode = 3

[node name="LabelYouWinLose" type="Label" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 456.0
offset_top = -328.0
offset_right = 1471.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 240
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="LabelYouWinLose"]
libraries = {
"": SubResource("AnimationLibrary_p2ymp")
}
autoplay = "RESET"

[node name="RoundStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8r05d")

[node name="Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_scu3q")

[node name="Lose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ermqd")
